src/App.css
@import url('https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,300;0,400;0,500;1,200;1,300;1,400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');


* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body{
  font-family: "Poppins";
}

#nav{
  padding: 16px 0;
  /* border: 1px solid red; */
  height: 100px;
}

.navbar{
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 75%;
  margin: 0 auto;
  
  
}

.navlinks a{
  box-shadow: inset 0 0 0 0 #000;
  padding: .2em .5em;
  margin: 0 2em;
  color: #2D3441;
  border: 1px solid black;
  text-decoration: none;
  font-weight: 500;
  transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
}

.navlinks a:hover {
  color: #fff;
  box-shadow: inset 200px 0 0 0 #000;
  ;
}
.logo h1{
  font-size: 1.5rem;
  letter-spacing: .1em;
  display: flex;
  align-items: center;
}

#nav button{
  
    outline: 0;
    cursor: pointer;
    border: 2px solid #000;
    border-radius: 3px;
    color: #fff;
    background: #000;
    font-size: 20px;
    font-weight: 600;
    line-height: 28px;
    padding: 16px 20px;
    text-align: center;
    transition-duration: .15s;
    transition-property: all;
    transition-timing-function: cubic-bezier(.4, 0, .2, 1);
  
    
}

#nav button:hover {
  color: #000;
  background: rgb(255, 218, 87);
}

.home{
  /* border: 2px solid black; */
  background: url(./assets/images/home-bg.png);
  background-position-x: center;

  height: calc(100dvh - 100px);
  display: flex;
  align-items: center;
justify-content: center;  
gap: 50px;
}

.home-main{
  /* border:  2px solid black; */
  width: 35%;
}

.hero{
  /* border: 1px solid green; */
}
.hero img{
  width: 500px;
}


.hero img {
  width: 500px;
  animation: float 3s ease-in-out infinite;
}

@keyframes float {

  0%,
  100% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(-10px);
  }
}


.words h1{
  font-size: 3.2rem;

  width: 70%;
  font-family: "Plus Jakarta Sans";
  color: #111827;
}

.words p{
  margin-top: 1.7em;
  color: #4B5563;
}

.words button{
  outline: 0;
  margin-top: 1.7em;
    cursor: pointer;
    border: 2px solid #000;
    border-radius: 3px;
    color: #fff;
    background: #000;
    font-size: 20px;
    font-weight: 600;
    line-height: 28px;
    padding: 16px 20px;
    text-align: center;
    transition-duration: .15s;
    transition-property: all;
    transition-timing-function: cubic-bezier(.4, 0, .2, 1);
}

.words button:hover {
  color: #000;
  background: rgb(255, 218, 87);
}

.socials{
  margin-top: 1.7rem;
}

.socials img{
  width: 22px;
  margin: 0 .3em;
  transition: all 100ms ease-in-out ;
  cursor: pointer;
}

.socials img:hover{
  transform: scale(1.3);
  
}

.stack-con{
  /* border: 1px solid red; */
  background-color: #000F08;
  padding: 4em 0;
}
.stacks{
  /* border: 1px solid green; */
  display: flex;
  margin: 0 auto;
  width: 80%;
  flex-grow: 1;
  flex-wrap: wrap;
  justify-content: space-between;
}

.stack{
  margin-bottom: 1em;
  width: 49.2%;
  height: 280px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  font-family: "Plus Jakarta Sans";
  background-color: #000;
  padding-left: 4em;
  padding-top: 1em;
  padding-bottom: 1em;

  box-shadow: 1px 1px 0px 0px rgba(0, 0, 0, 0);
    -webkit-box-shadow: 1px 1px 0px 0px rgba(0, 0, 0, 0);
    -moz-box-shadow: 1px 1px 0px 0px rgba(0, 0, 0, 0);

    border: 1px solid rgba(255, 255, 255, 0.1);
    border-radius: 5px;


    transition: transform 0.2s ease-in-out;
}


.glowing-cursor {
  position: fixed;
  pointer-events: none;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background-color: rgba(0, 128, 255, 0.6);
  box-shadow: 0 0 15px 5px rgba(0, 128, 255, 0.6);
  transition: transform 0.1s ease-out;
  z-index: 9999;
  opacity: 0;
}

.stack h2 {
  color: #FCB9B9;
  font-weight: 600;
  opacity: 0.8;

}

.stack p {
  margin-top: 1em;
  width: 70%;
  color: rgba(255, 255, 255, 0.8)
}

.stack button{
  margin-top: 3em;
  background: transparent;
  color: #ED231D;
  font-size: 1rem;
  border: none;
  font-family: "Plus Jakarta Sans";
  opacity: 0.8;
  display: flex;
  align-items: center;
  cursor: pointer;
  transition: all 200ms ease-in-out;
}

.stack button:hover{
  transform: scale(1.1);
}


.stack button img{
  width: 20px;
  margin-left: .5em;
}

.idea-con{
  /* border: 1px solid red; */
  padding: 8em 0;
}
.idea{
  display: flex;
  /* border: 1px solid blue; */
  width: 80%;
  margin: 0 auto;
  justify-content: space-between;
}

.left-side img{
  width: 100%;
  margin-top: 1em;
  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
    -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
    -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
    border-radius: 10px;
}

.insight-con{
  
  height: 115px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #1F1F1F;
  padding: 0 1em;
  border-radius: 10px;
}

.insight-con h1{
  font-size: 3rem;
  
}

.insight-con h3{
  color: #9CA3AF;
  opacity: 0.8;
}
.insight-con p {
  color: #F3F4F6;
  opacity: 0.8;
}

.left-side{
  
  width: 32%;
}
.right-side{
  /* border: 3px solid pink; */
  width: 55%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.right-side h1{
  font-size: 2.5rem;
  font-family: "Plus Jakarta Sans";
  color: #1F1F1F;
}

.ready{
  width: 80%;
}

.ability{
  
}
.ability img{
  width: 16px;
}
.ability p{
  display: flex;
  align-items: center;
  margin-top: 1em;
  color: #1F1F1F;
  font-family: "Plus Jakarta Sans";
  font-size: 18px;
  font-weight: 600;
}

.skills-con{
  /* border: 1px solid red; */
  padding: 4em 0;
  background-color: #000F08;
}

.skills h1{
  text-align: center;
  color: #fff;
  font-size: 2.2rem;
  opacity: 0.8;
}
.specialty{
  text-align: center;
  color: #fff;
  opacity: 0.8;
}

.skills{
  width: 80%;
  margin: 0 auto;
}

.left, .right{
  /* border: 1px solid green; */
  width: 28%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 10px;
}



.skill{
  width: 100%;
  /* border: 1px solid blue; */
  /* height: 100px; */
  background-color: #2F3435;
  
  border-radius: 10px;
  padding: 1em 0 1em 1em;
  transition: all 200ms ease-in-out;
}

.left .skill:hover{
  transform: translateX(10px);
}
.right .skill:hover{
  transform: translateX(-10px);
}

.skill-line h3{
  color: rgba(255, 255, 255, 0.8);
  font-size: 1rem;
}

.skill-line p{
  color: rgba(255, 255, 255, 0.8);
  font-size: 14px;
  font-weight: 400
}

.skill-box{
  display: flex;
  justify-content: space-between;
  position: relative;
  padding: 3em 5em;
  background-color: #000402;
  margin-top: 2.3em;
  border: 1px solid rgba(255, 255, 255, 0.1);
    border-radius: 5px;
}


.middle img{
  width: 20px;
  height: 20px;
}

.middle{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  /* border: 1px solid brown; */
  width: 40%;
  
}
.stack-icon{
  display: flex;
  justify-content: space-between;
  /* border: 1px solid seagreen; */
  height: 100px;
  align-items: center;
}

.stack-icon div{
  padding: .5em;
  border-radius: 50%;
  border: 1px solid rgba(255, 255, 255, 0.1);
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #1F1F1F;
}

.octagon{
  position: absolute;
  top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: .5em;
    border: 1px solid rgba(255, 255, 255, 0.1);
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #3D444D;

}

.octagon img{
  width: 50px;
  height: 50px;
}

.recent-con{
  
  padding: 3em 0;
  background-color: #F9F9F9;
}

.project-img{
  height: 250px;
  
  
}

.project-img img{
  width: 100%;
  height: 100%;
  object-fit: cover;
  /* border: 1px solid pink; */
  transition: transform 0.4s ease-in-out;
}




.project-con{
  /* border: 1px solid green; */
  width: 80%;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  margin-top: 3em;
  
}
.project{
  width: 32%;
  transition: all 100ms ease-in-out;
  /* border: 1px solid black; */
  padding-bottom: .5em;
  border-radius: 4px;
  overflow: hidden;
  box-shadow: -1px 3px 5px 0px rgba(0, 0, 0, 0.75);
    -webkit-box-shadow: -1px 3px 5px 0px rgba(0, 0, 0, 0.75);
    -moz-box-shadow: -1px 3px 5px 0px rgba(0, 0, 0, 0.75);
    background-color: #fff;
    position: relative;
}

.project:hover .project-img img {

  filter: blur(4px);
  
}
.project:hover .visit {

opacity: 1;
z-index: 100;
}
.project:hover .project-main{
  transform: translateY(-5px);
}
.project:hover .stack-used{
  transform: translateY(-5px);
}

.project-main h2{
  color: #1F1F1F;
  font-size: 1.3rem;
  opacity: 0.8;
}

.project-main p{
  color: #030712;
  font-size: 0.9rem;
  opacity: 0.8;
}

.project-main{
  padding-left: 1em;
  margin-top: 1em;
  transition: all 100ms ease-in-out;
}

.stack-used{
  display: flex;
  padding-left: 1em;
  margin-top: 1.5em;
  gap: 8px;
  flex-grow: 1;
  flex-wrap: wrap;
  transition: all 100ms ease-in-out;

}

.stack-used p{
  
  padding: 0 .5em;
  background-color: #F3F4F6;
  color: #1F1F1F;
  opacity: 0.8;
  border-radius: 10px;
  box-shadow: -1px 3px 5px 0px rgba(0, 0, 0, 0.75);
    -webkit-box-shadow: -1px 3px 5px 0px rgba(0, 0, 0, 0.75);
    -moz-box-shadow: -1px 3px 5px 0px rgba(0, 0, 0, 0.75);
}

.visit{
  position: absolute;
  top: 25%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    align-items: center;
    padding: .8em 1em;
    gap: 4px;
    
    background-color: white;
    opacity: 0;
    transition: all 300ms ease-in-out;
    border-radius: 5px;
    cursor: pointer;
    transition: all 200ms ease-in-out;
}

.visit:hover{
  background-color: #7F7F7F;
  color: white;
}
.visit img{
  width: 16px;
  z-index: 1;
}
.recent-p, .recent-h{
  text-align: center;
  color: #1F1F1F;
  opacity: 0.8;
}

.view-btn{
  /* border: 1px solid red; */
  display: flex;
  justify-content: center;
  margin-top: 2em;
}

.recent button{
  outline: 0;
    cursor: pointer;
    border: 2px solid #000;
    border-radius: 10px;
    color: #fff;
    background: #000;
    font-size: 20px;
    font-weight: 600;
    line-height: 28px;
    padding: 16px 20px;
    text-align: center;
    transition-duration: .15s;
    transition-property: all;
    transition-timing-function: cubic-bezier(.4, 0, .2, 1);
    
}

.recent button:hover{
  color: #000;
    background: rgb(255, 218, 87);
}

